Add: Nginx config, docker compose setup working , update documents.